fix header misalignment

--- a/project-pages/selenity-travels/product-landing.css
+++ b/project-pages/selenity-travels/product-landing.css
@@ -28,12 +28,15 @@ header {
   max-width: 1260px;
   margin: auto;
 }
-#nav-bar {
-  min-width: 300px;
-  font-size: 18px;
+li {
+  padding-top: 0;
+  margin-top: 0;
+  list-style: none;
 }
 .nav-container {
-  list-style-type: none;
+  height: 40px;
+  min-width: 300px;
+  font-size: 18px;
   margin: 0;
   padding: 0;
   justify-content: space-between;
@@ -45,8 +48,7 @@ header {
 .nav-link:hover {
   color: #A714D4;
 }
-/* shrinking header */
-/* large */
+
 .header-large {
   height: 110px;
   transition: 0.3s;
@@ -71,7 +73,6 @@ header {
   font-size: 30px;
   transition: 0.3s;
 }
-/* small */
 .header-small {
   height: 40px;
   border-bottom-width: 1px;
@@ -90,7 +91,6 @@ header {
   opacity: 0;
 }
 
-/*********** main ***********/
 .main {
   width: 100vw;
 }
@@ -98,27 +98,31 @@ header {
   width: 76vw;
   margin: auto;
   max-width: 1260px;
-  padding-top: 60px;
-}
-#why-this-matters {
-  height: 100vh;
-  padding-top: 140px;
-  margin-top: 0;
 }
 h2 {
   padding-bottom: 20px;
   margin: 0;
   font-size: 30px;
 }
+#why-this-matters {
+  padding-top: 140px;
+}
+#packages {
+  padding: 60px 0;
+  margin-top: 60px;
+}
+#bottom-third {
+  padding: 30px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: space-between;
+}
 .package-background {
   background-image: url("night-sky.jpeg");
   background-attachment: fixed;
   background-size: cover;
 }
-#packages {
-  padding-bottom: 80px;
-}
-.package-container {
+.packageBox-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -126,7 +130,7 @@ h2 {
 #package-heading, #package-pricing {
   color: #f9f9fa;
 }
-.package {
+.packageBox {
   background-color: #f9f9fa;
   height: 22vw;
   width: 22vw;
@@ -135,13 +139,6 @@ h2 {
   min-width: 330px;
   min-height: 330px;
   margin-right: 20px;
-}
-legend {
-  padding-top: 6px;
-  font-size: 24px;
-  font-weight: bold;
-  text-decoration: underline solid #c0c0c0;
-  text-align: center;
 }
 .package-list {
   padding: 0;
@@ -152,7 +149,19 @@ legend {
   color: #434343;
   line-height: 32px;
 }
-#form {
+legend {
+  padding-top: 6px;
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: underline solid #c0c0c0;
+  text-align: center;
+}
+
+#about {
+  max-width: 600px;
+  margin-right: 70px;
+}
+#contact-form {
   display: flex;
   flex-direction: column;
   width: 330px;
@@ -165,17 +174,8 @@ input {
 textarea {
   margin-bottom: 15px;
 }
-#submit {
+#submit-button {
   width: 80px;
-}
-#bottom-third {
-  display: flex;
-  flex-direction: row;
-  align-items: space-between;
-}
-#about {
-  max-width: 600px;
-  margin-right: 70px;
 }
 
 /*********** footer ***********/
@@ -242,8 +242,8 @@ footer {
   }
 }
 @media (max-width: 948px) {
-  .main {
-    padding-top: 60px;
+  #why-this-matters {
+    padding-top: 100px;
   }
   .header-large {
     height: 70px;
@@ -297,13 +297,9 @@ footer {
 }
 
 @media (max-width: 780px) {
-  #nav-bar {
-    font-size: 14px;
-    display: flex;
-    justify-content: flex-end;
-    min-width: 0px;
-  }
   .nav-container {
+    height: 60px;
+    font-size: 14px;
     min-width: 110px;
     display: flex;
     flex-direction: column;
